@@ -297,6 +297,20 @@ name|hadoop
 operator|.
 name|hbase
 operator|.
+name|ColumnNameParseException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
 name|DroppedSnapshotException
 import|;
 end_import
@@ -4835,6 +4849,30 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+comment|// Check columns passed
+if|if
+condition|(
+name|columns
+operator|!=
+literal|null
+condition|)
+block|{
+for|for
+control|(
+name|byte
+index|[]
+name|column
+range|:
+name|columns
+control|)
+block|{
+name|checkColumn
+argument_list|(
+name|column
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 name|HStoreKey
 name|key
 init|=
@@ -6835,6 +6873,8 @@ name|columnName
 parameter_list|)
 throws|throws
 name|NoSuchColumnFamilyException
+throws|,
+name|ColumnNameParseException
 block|{
 if|if
 condition|(
@@ -6844,6 +6884,44 @@ literal|null
 condition|)
 block|{
 return|return;
+block|}
+name|int
+name|index
+init|=
+name|HStoreKey
+operator|.
+name|getFamilyDelimiterIndex
+argument_list|(
+name|columnName
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|index
+operator|<=
+literal|0
+condition|)
+block|{
+throw|throw
+operator|new
+name|ColumnNameParseException
+argument_list|(
+name|Bytes
+operator|.
+name|toString
+argument_list|(
+name|columnName
+argument_list|)
+operator|+
+literal|" is missing column family delimiter '"
+operator|+
+name|HStoreKey
+operator|.
+name|COLUMN_FAMILY_DELIMITER
+operator|+
+literal|"'"
+argument_list|)
+throw|;
 block|}
 if|if
 condition|(
@@ -6856,6 +6934,8 @@ operator|.
 name|hasFamily
 argument_list|(
 name|columnName
+argument_list|,
+name|index
 argument_list|)
 condition|)
 block|{
